# django-tp

./: README.md  compose.dev.yaml  compose.dev.yml  compose.prod.yml  compose.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  export-env.sh  manage.py  pyproject.toml
backend/: .dockerignore  .gitignore  README.md  compose.dev.yml  compose.prod.yml  gunicorn.conf.py  manage.py  poetry.toml  pyproject.toml  requirements.txt
backend/authentication/: urls.py  views.py
backend/django_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/django_app/settings/: base.py  dev.py  hybrid.py  prod.py
backend/docker/dev/: Dockerfile
backend/docker/hybrid/: Dockerfile
backend/docker/prod/: Dockerfile
backend/env/prod/: env.django.prod  env.postgres.prod
backend/messages_api/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/messages_api/migrations/: 0001_initial.py
backend/scripts/: entrypoint-dev.sh  entrypoint-hybrid.sh  entrypoint-prod.sh
backend/static/: index.html  manifest.json
backend/static/assets/: index-0dafa04e.js  index-ac809cb8.css  main-e12e236d.js
backend/templates/: index.html
backend/tp_django/: asgi.py  settings.py
docker/dev/: Dockerfile
docs/en/: README.md
docs/fr/: README.md
docs/slidev/tp-1/: package-lock.json  package.json  slides.md
docs/tp-1/en/: README.md
docs/tp-1/fr/: README.md
env/: env.dev
frontend/: .env.dev  bun.lockb  package-lock.json  package.json  vite.config.ts
frontend/docker/dev/: Dockerfile
frontend/docker/prod/: Dockerfile
frontend/src/: App.tsx  main.tsx
frontend/src/components/: hero-banner.tsx  login.tsx  navigations.tsx
tp_django/: asgi.py  settings.py  urls.py  wsgi.py
tp_django/settings/: default.py  dev.py
(+3 files in other folders)
